Overflow Glitch Fixed

--- a/Code/index.css
+++ b/Code/index.css
@@ -3,7 +3,7 @@ html {
   height: 100%;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 
